# Group6

./: CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
cmake/: FindLibAV.cmake
src/: DiplayGLWidget.h  DisplayGLWidget.cpp  DisplayGLWidget.h  MyGLWidget.cpp  MyGLWidget.h  StreamMainWindow.cpp  StreamMainWindow.h  StreamMainWindow.qrc  StreamMainWindow.ui  TwitchWindow.cpp  TwitchWindow.h  TwitchWindow.qrc  TwitchWindow.ui  main.cpp
src/Components/: Application.cpp  Application.h  Capture.cpp  Capture.h  Component.cpp  Component.h  Component.hpp  Controller.cpp  Controller.h  DataType.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Render.cpp  Render.h  Router.cpp  Router.h  ScreenCapture.cpp  ScreenCapture.h
src/GUI/: DisplayGLWidget.cpp  DisplayGLWidget.h  StreamMainWindow.cpp  StreamMainWindow.h  StreamMainWindow.qrc  StreamMainWindow_ui.cpp  StreamMainWindow_ui.h
src/Test/: CoderTest.cpp  ComponentTest.cpp  GTest.cpp
